--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "karma-node-resolve-preprocessor",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Karma preprocessor to resolve bare module imports to `node_modules` folder",
   "license": "MIT",
+  "main": "./src/index.js",
   "keywords": [
     "karma-plugin",
     "karma-preprocessor",
