--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "node": ">= 10.0.0"
   },
   "dependencies": {
-    "es-module-lexer": "^0.3.20"
+    "es-module-lexer": "^0.3.20",
+    "find-up": "^6.3.0",
+    "import-meta-resolve": "^2.0.1"
   },
   "peerDependencies": {
     "karma": ">=3.1.0"
